[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = "A project to experiment with the design patterns from the book of the same name."
authors = ["Grayson Savage <graysav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dearpygui = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
